...
            Button("Previous", systemImage: "chevron.up") {
                focusCoordinator.move(.previous)
            }
            .labelStyle(.iconOnly)
            .disabled(!focusCoordinator.canMove(.previous))

            Button("Next", systemImage: "chevron.down") {
                focusCoordinator.move(.next)
            }
            .labelStyle(.iconOnly)
            .disabled(!focusCoordinator.canMove(.next))

            Spacer(minLength: 0)
...
        .fontWeight(.medium)
    }

    @ViewBuilder
    private var doneButton: some View {
        if iconOnlyDoneButton {
            Button("Done", systemImage: "checkmark") {
                focusCoordinator.dismiss()
            }
            .labelStyle(.iconOnly)
            .bold()
        } else {
            Button("Done", systemImage: "checkmark") {
...
